feat/i8: Improvements into the unit and integrations test of the class Workout exercise